# alma-th

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260718_0001_initial_schema.py  20260718_0002_leads_status_created_at_index.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  leads.py
backend/app/models/: __init__.py  email_outbox.py  enums.py  lead.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  leads.py
backend/app/services/: email.py  leads.py  outbox.py  storage.py
backend/scripts/: dev_seed.py  docker-entrypoint.sh
docs/: DESIGN.md  FRONTEND_DESIGN.md  PROBLEM.md  WRITEUP.md
docs/transcripts/: design-document-clarification.md  email.md  frontend.md  pagination.md  tooltip-component.md
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/get-started/: page.tsx
frontend/src/components/: app-providers.tsx  dashboard-shell.tsx  data-table.tsx
frontend/src/components/ui/: spinner.tsx
frontend/src/features/auth/api/: auth.api.ts
frontend/src/features/auth/hooks/: use-login.ts  use-logout.ts  use-me.ts
frontend/src/features/leads/api/: leads.api.ts
frontend/src/features/leads/components/: resume-pdf-viewer.tsx
frontend/src/features/leads/hooks/: lead-keys.ts  (+4 more)
frontend/src/lib/: api-client.ts  api.ts  types.ts
(+4 files in other folders)
