[project]
name = "alma-backend"
version = "0.1.0"
description = "Alma lead intake API (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.17",
    "boto3>=1.35.0",
    "resend>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
